# pipeline

./: .gitignore  main.py  pyproject.toml  test.py
pipeline/: __init__.py  node.py  pipeline.py  utils.py
setting/: logger.yml
