[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["TripleAVerAlpha <TripleAVerAlpha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
graphviz = "0.20.1"
PyYAML = "6.0"
tqdm = "4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
